--- a/ReviewS/Base.lproj/Main.storyboard
+++ b/ReviewS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11521.1" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UGW-VP-juG">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11521.1" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UGW-VP-juG">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11517.1"/>
@@ -251,7 +251,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFx-kn-otI">
-                                <frame key="frameInset" minX="-5" minY="20" height="44" maxX="1"/>
+                                <frame key="frameInset" minX="-6" minY="20" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem id="jus-7O-Z0V">
@@ -755,6 +755,32 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Mom-Xk-syg">
+                                <frame key="frameInset" minX="1" minY="198" width="767" height="589"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="scoreCell" id="NDk-9k-H60">
+                                        <rect key="frame" x="0.0" y="28" width="767" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NDk-9k-H60" id="ewc-s7-Ela">
+                                            <frame key="frameInset" width="767" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="YlU-ys-6xQ" id="wJx-r4-spX"/>
+                                    <outlet property="delegate" destination="YlU-ys-6xQ" id="nbi-4N-rEg"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E9J-Ao-kHG">
+                                <frame key="frameInset" minX="634" minY="28" width="114" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -769,7 +795,9 @@
                         <outlet property="incorrectLabel" destination="sTp-zY-MmC" id="6yi-9B-yd8"/>
                         <outlet property="restartBtn" destination="eap-7Q-91z" id="72W-8h-fH2"/>
                         <outlet property="startButton" destination="4RI-ud-nrl" id="sYN-U6-2XL"/>
+                        <outlet property="tableViewScore" destination="Mom-Xk-syg" id="lMb-HB-Mhu"/>
                         <outlet property="theEnd" destination="0rr-Rc-5sB" id="9L1-yQ-T54"/>
+                        <outlet property="userButton" destination="E9J-Ao-kHG" id="JgK-1h-q7j"/>
                         <outletCollection property="Buttons" destination="XBa-TH-eTX" collectionClass="NSMutableArray" id="Zth-9z-2qU"/>
                         <outletCollection property="Buttons" destination="F89-91-2pi" collectionClass="NSMutableArray" id="n8Z-Pv-WN8"/>
                         <outletCollection property="Buttons" destination="Nm7-7h-tob" collectionClass="NSMutableArray" id="F48-8v-Fbb"/>
